[gd_scene load_steps=3 format=3 uid="uid://fih1la8ol5eg"]

[ext_resource type="Script" path="res://ui/image_viewer/symbol/editing/symbol_editor_controller.gd" id="1_c6i15"]
[ext_resource type="PackedScene" uid="uid://cbkdst3f4uqnj" path="res://ui/image_viewer/symbol/editing/symbol_editor_handle.tscn" id="2_qkxtm"]

[node name="SymbolEditorController" type="Node2D"]
z_index = 2
script = ExtResource("1_c6i15")

[node name="SymbolRect" type="Node2D" parent="."]

[node name="Translate_Handle" parent="." instance=ExtResource("2_qkxtm")]
type = 2
scale_type = 4

[node name="TL_Handle" parent="." instance=ExtResource("2_qkxtm")]

[node name="TR_Handle" parent="." instance=ExtResource("2_qkxtm")]
scale_type = 1

[node name="BL_Handle" parent="." instance=ExtResource("2_qkxtm")]
scale_type = 2

[node name="BR_Handle" parent="." instance=ExtResource("2_qkxtm")]
scale_type = 3

[node name="Rot_Handle" parent="." instance=ExtResource("2_qkxtm")]
type = 1
scale_type = 4
